Validating `null` value for the `compliance.zalando.org/aspd-classification` annotation (#227)
* Add test case for validating `null` value for the `compliance.zalando.org/aspd-classification` annotation

* Update api-metastore/src/main/java/org/zalando/nakadi/service/validation/EventTypeAnnotationsValidator.java

Co-authored-by: Filippo Ghibellini <filippo.ghibellini@zalando.de>